# Wastafel_IoT

./: .claudeignore  .gitignore  CLAUDE_REPLY.md  CMakeLists.txt  README.md  sdkconfig
components/common/: CMakeLists.txt
components/common/include/: pins.h
components/data_processing/: CMakeLists.txt
components/data_processing/include/: data_processing.h
components/display_service/: CMakeLists.txt  display_service.cpp
components/display_service/include/: display_service.h
components/hardware_manager/: CMakeLists.txt  hardware_manager.cpp
components/hardware_manager/include/: hardware_manager.h
components/hcsr04/: CMakeLists.txt  hcsr04.cpp
components/hcsr04/include/: hcsr04.h
components/i2c_lcd/: CMakeLists.txt  i2c_lcd.cpp
components/i2c_lcd/include/: i2c_lcd.h
components/iot_service/: CMakeLists.txt  iot_service.cpp
components/iot_service/include/: iot_service.h
docs/agents/: ASSESSMENT_FRAMEWORK.md  FRAMEWORK.md  GENESIS_PROMPT.md  MASTER_PLAN.md  PERPLEXITY_BRIEF.md  PINOUT_DRAFT.md
docs/superpowers/specs/: 2026-06-03-refactor-architecture-design.md
docs/system/: DATA_PROCESSING.md  DISPLAY_SPEC.md  HARDWARE.md  IOT_SPEC.md  MAIN_FLOW.md  ORCHESTRA.md  SERVICES_SPEC.md
main/: CMakeLists.txt  Kconfig.projbuild  diagnostic_main.cpp  main.cpp
main/include/: pins.h
refactored/: display_service.cpp  display_service.h  iot_service.cpp  iot_service.h  main.cpp
